--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-tab-view": "^4.1.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-native-pager-view": "6.9.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
